# build-scripts

./: LICENSE  README.md  install.sh  versions.sh
codes/: install_acetk.sh  install_advantg.sh  install_alara.sh  install_armadillo.sh  install_binutils.sh  install_boost.sh  install_cgm.sh  install_cgm_cubit.sh  install_cgm_oce.sh  install_cmake.sh  install_cnpy.sh  install_dagmc.sh  install_dagmc_jet.sh  install_dakota.sh  install_drosg2000.sh  install_eigen.sh  install_exnihilo.sh  install_flair.sh  install_fluka.sh  install_frensie.sh  install_g4beamline.sh  install_gcc.sh  install_geant4.sh  install_geany.sh  install_git.sh  install_hdf5.sh  install_intltool.sh  install_isc.sh  install_lapack.sh  install_lava.sh  install_llvm.sh  install_mcnp.sh  install_mcnp2cad.sh  install_mcnp2cad_cubit.sh  install_mcnp2cad_oce.sh  install_mcnptools.sh  install_moab.sh  install_mpich.sh  install_njoy.sh  install_numpy.sh  (+17 more)
codes/drosg2000/: CMakeLists.txt
tools/: env_DESKTOP-KCRSAR6.sh  env_aci-service-2.sh  env_aries.sh  env_hpclogin2.sh  env_mcnp1.sh  env_tux-c3.sh  env_zapdos.sh
